--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,14 @@
 !/Logica
 /Logica/*
 !/Logica/*.tex
-!/Logica/*/*.pdf
+!/Logica/build/*.pdf
 
 !/Sucesiones
 /Sucesiones/*
 !/Sucesiones/*.tex
-!/Sucesiones/*/*.pdf
+!/Sucesiones/build/*.pdf
 
 !/Sumatorio
 /Sumatorio/*
 !/Sumatorio/*.tex
-!/Sumatorio/*/*.pdf
+!/Sumatorio/build/*.pdf
